Adjustments to the styling of the Skill search component as some of the spacing was off.  Set it up as fixed position so that it is always visibile even when the skill form is scrolled.  A couple more minor styling adjustments to the company and person search components on the setup forms.

--- a/src/components/search/CompanySearch/scss/companySearch.scss
+++ b/src/components/search/CompanySearch/scss/companySearch.scss
@@ -5,6 +5,7 @@
 		background: #eaeaea;
 		min-width: 402px;
 		max-height: 655px;
+		border-radius: 20px;
 		padding: 1em 2em 2em;
 
 		.md-card-title--primary {
