--- a/src/components/search/PersonSearch/css/personSearch.css
+++ b/src/components/search/PersonSearch/css/personSearch.css
@@ -2,6 +2,7 @@
   background: #eaeaea;
   min-width: 402px;
   max-height: 655px;
+  border-radius: 20px;
   padding: 1em 2em 2em;
 }
 
